[package]
name = "rust-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
alacritty_terminal = "0.24"
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.29"
futures = "0.3"
smol = "2.0"
sysinfo = "0.30"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"