[package]
name = "rust-terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-terminal"
path = "src/main.rs"

[dependencies]
alacritty_terminal = "0.24"
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.29"
futures = "0.3"
smol = "2.0"
sysinfo = "0.30"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
arboard = "3.4"
ctrlc = "3.4"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"